# Industry-AI-Agent-Benchmark

./: .gitignore  KPI_detail.md  PRD 3.2.md  PRD 3.3.md  PRD 3.4.md  PROJECT_STATUS_REPORT.md  README.md  TODO.md  TODO_Unity_Pathfinding.md  pyproject.toml  run_mock_agent.py  run_multi_line_simulation.py  run_simulation.py
analysis/: state_action_space_analysis.md
config/: factory_layout.yml  factory_layout_multi.yml  path_timing.py  schemas.py  settings.py  topics.py
docs/: FINAL_REPORT.md  SYSTEM_STATUS.md  fault_diagnosis_manual.md  mqtt_docs.md  选手使用指南.md
src/: main.py  user_input.py  user_input_multi.py
src/agent_interface/: command_handler.py  multi_line_command_handler.py
src/game_logic/: fault_system.py  kpi_calculator.py  order_generator.py  state_space_manager.py
src/pathfinding/: __init__.py  astar_pathfinder.py
src/simulation/: factory.py  factory_multi.py  factory_with_pathfinding.py  line.py
src/unity_interface/: __init__.py  (+1 more)
test/: README.md  run_tests.py  test_agv_charging.py  test_buffer_full_alert.py  test_conveyor_blocking.py  test_conveyor_fault.py  test_enhanced_factory.py  test_factory_simulation.py  test_fault_diagnosis_demo.py  test_fault_scenarios.py  test_fault_system.py  test_interactive_factory.py  test_kpi_comprehensive.py  test_kpi_prd_compliance.py  test_kpi_simple.py  test_performance_benchmark.py  test_quality_checker_real_flow.py  test_score_calculation.py  test_score_range.py  test_station_fault.py  test_updated_kpi.py  test_warehouse_materials.py  test_whole_line_simulation.py
tools/: mock_agent.py
(+13 files in other folders)
